<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <!--TOASTS-->
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">android:text</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone:</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="note_label_text">Note</string>
    <string name="choose_delivery_method">Chose a Delivery method:</string>
    <string name="pick_up">Pick up</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="any_special_requests">Any Special Requests?</string>
    <string name="title_activity_checkboxes_and_etc">Checkboxes_and_etc</string>
    <string name="title_activity_checkboxes">checkboxes</string>
    <string name="pick_your_toppings">Pick Your Toppings</string>
    <string name="chocolate_syrup">Chocolate Syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="chrushed_nuts">Chrushed Nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie_crumbies">Orio Cookie Crumbies</string>
    <string name="action_order">Order</string>
    <string name="contaact">Contact</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>

</resources>
